[package]
name = "angel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
dotenvy = "0.15.7"
jiff = { version = "0.2.20", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.8"

[[bin]]
name = "angel"
path = "src/main.rs"

[lib]
name = "angel"
path = "src/lib/lib.rs"
